--- a/src/pages/enterprise/Register.css
+++ b/src/pages/enterprise/Register.css
@@ -88,7 +88,7 @@
 .error-container {
     display: flex;
     margin-top: 1rem;
-    color: rgb(215, 92, 92);
+    color: rgb(0 94 211);
     flex-direction: column;
     height: 6.5rem;
     justify-content: center;
